[package]
name = "frmctph"
version = "0.1.0"
edition = "2024"

[dependencies]
tiny_http = "0.12.0"
windows = { version = "0.54.0", features = [
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com"
] } 

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
